deployment/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  labels:
    app: hello-k8s
spec:
  type: ClusterIP
  selector:
    app: hello-k8s
  ports:
    - port: 8080
      name: hello-k8s
      protocol: TCP
      targetPort: 8080
